--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body{
     width:100%;
     height:100%;
-    background-color: red;
+    /* background-color: red; */
 }
 
 .pet{
@@ -20,7 +20,15 @@ body{
 }
 .walk{
     background: transparent url("./poring_WALK_1.png") 0 0 no-repeat;
+}
+.walkSpeed1{
     animation: walk 1s steps(11) infinite;
+}
+.walkSpeed2{
+    animation: walk 0.5s steps(11) infinite;
+}
+.walkSpeed3{
+    animation: walk 0.25s steps(11) infinite;
 }
 .dragged{
     /* transform: scaleX(3); */
@@ -43,7 +51,7 @@ body{
     width:40px;
     height: 40px;
     border-radius: 50% 50%;
-    background-color: rgba(0, 0, 0, 0.301);
+    background-color: rgba(0, 0, 0, 0.629);
     z-index: 0;
 }
 
@@ -91,15 +99,7 @@ body{
     }
 }
 @keyframes walk {
-    0%{
-        /* transform-origin: 50% 100%; */
-    }
-    50%{
-        /* top:20px; */
-    }
     100% {
-        /* transform-origin: 50% 100%; */
-        /* transform: translate(0px,0px); */
         background-position: -660px, 0;
     }
 }
